# SentinelX

./: .gitignore  .gitmodules  ARCHITECTURE_PROGRESS.md  CMakeLists.txt  Dockerfile  NEW_ARCHITECTURE_QUICKSTART.md  README.md  build.sh  run_all_tests.sh
Documentation/: README.md  VSCODE_INTEGRATION.md
data/cwe/: cwe_database.db
docker/: Dockerfile  QUICKSTART.md  README.md  SUMMARY.md  build_and_test.sh  docker-compose.yml  exploit_test.py  test_exploit.py  vuln_program.c
examples/: demo_new_architecture.cpp  vulnerable_test.c
include/: analyzer.h  arithmetic_analyzer.h  binary_parser.h  buffer_analysis.h  call_graph.h  call_site_analyzer.h  detectors.h  disassembler.h  exploit_engine.h  exploit_templates.h  exploit_types.h  fsm.h  fsm.hpp  gadget_finder.h  json_output.hpp  report.hpp  rop_builder.h  shellcode_generator.h  stack_analyzer.h  taint_analysis.h  types.h  utils.h
include/sentinelx/core/: analysis_context.h  orchestrator.h  types.h
include/sentinelx/cwe/: cwe_repository.h
include/sentinelx/detectors/: buffer_overflow_detector.h  detector_interface.h  detector_metadata.h
src/: analyzer.cpp  arithmetic_analyzer.cpp  binary_parser.cpp  buffer_analysis.cpp  call_graph.cpp  call_site_analyzer.cpp  detectors.cpp  disassembler.cpp  exploit_engine.cpp  exploit_templates.cpp  fsm.cpp  gadget_finder.cpp  json_output.cpp  main.cpp  rop_builder.cpp  shellcode_generator.cpp  stack_analyzer.cpp  taint_analysis.cpp  utils.cpp
src/core/: orchestrator.cpp
src/cwe/: cwe_repository.cpp  cwe_schema.sql
src/detectors/: buffer_overflow_detector.cpp
tests/buffer_overflow/: auth_overflow.c  safe.c  vulnerable.c
tests/buffer_overflow/safe.dSYM/Contents/Resources/DWARF/: safe
tests/buffer_overflow/safe.dSYM/Contents/Resources/Relocations/aarch64/: safe.yml
tests/buffer_overflow/vulnerable.dSYM/Contents/Resources/DWARF/: vulnerable
tests/buffer_overflow/vulnerable.dSYM/Contents/Resources/Relocations/aarch64/: vulnerable.yml
tests/command_injection/: safe.c  vulnerable.c
tests/command_injection/vulnerable.dSYM/Contents/Resources/DWARF/: vulnerable
tests/command_injection/vulnerable.dSYM/Contents/Resources/Relocations/aarch64/: vulnerable.yml
tests/format_string/: safe.c  vulnerable.c
tests/integer_overflow/: safe.c  vulnerable.c
tests/integer_overflow/vulnerable.dSYM/Contents/: Info.plist
tests/integer_overflow/vulnerable.dSYM/Contents/Resources/DWARF/: vulnerable
tests/integer_overflow/vulnerable.dSYM/Contents/Resources/Relocations/aarch64/: vulnerable.yml
tests/race_condition/: safe.c  vulnerable.c
tests/race_condition/safe.dSYM/Contents/: Info.plist
tests/race_condition/safe.dSYM/Contents/Resources/DWARF/: safe
tests/race_condition/safe.dSYM/Contents/Resources/Relocations/aarch64/: safe.yml
tests/realistic_vuln/: README.md  exploit_BIN_UNSAFE_CALL_printf__main.py  exploit_BIN_UNSAFE_CALL_strcpy__process_login.c  exploit_BIN_UNSAFE_CALL_strcpy__process_login.py  simple_auth.c  test.py  test_exploit.py
tests/results/: complex_format_string_output.json  complex_format_string_output.txt  definite_vulnerabilities_output.json  definite_vulnerabilities_output.txt  obfuscated_overflow_output.json  obfuscated_overflow_output.txt  safe_printf_output.json  safe_printf_output.txt  safe_strcpy_output.json  safe_strcpy_output.txt
tests/use_after_free/: safe.c  vulnerable.c
tests/use_after_free/vulnerable.dSYM/Contents/Resources/DWARF/: vulnerable
tests/use_after_free/vulnerable.dSYM/Contents/Resources/Relocations/aarch64/: vulnerable.yml
vscode-extension/: CHANGELOG.md  README.md  install.bat  install.sh  package-lock.json  package.json
vscode-extension/src/: extension.ts
